FIX some more layout problem and removed CSS grid form part

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -95,8 +95,8 @@ footer span {
 }
 
 .hero-text {
-    position: relative;
-    left: 3vw;
+    position: absolute;
+    left: 2vw;
     width: 300px;
     height: auto;
     padding: 10px;
@@ -189,6 +189,11 @@ select {
     border-radius: 2%;
 }
 
+.focus:focus {
+    background: papayawhip;
+}
+
+
 
 .fb-grid-container {
     display: grid;
@@ -198,42 +203,14 @@ select {
 
 
 
-/* aligning form elements with grid */
 
-.form-name {
-    grid-row: 1/2;
-    grid-column: 2/4;
-}
-
-.form-email {
-    grid-row: 1/2;
-    grid-column: 4/6;
-    margin-right: 10px;
-}
-
-.form-concern {
-    grid-row: 2/3;
-    grid-column: 2/4;
-}
-
-.form-comment {
-    grid-row: 3/4;
-    grid-column: 2/5;
-}
-
-.form-send {
-    grid-row: 4/5;
-    grid-column: 3/4;
-    align-self: center;
-}
 
 .send-btn {
     width: 100px;
     font-size: 20px;
     font-weight: bold;
-    font-family: sans-serif;
+    font-family: var(--heading-font-family);
     text-decoration: none;
-    /*display: flex;*/
     text-align: center;
     padding: 0 0 5px;
     margin-top: 0;
@@ -245,46 +222,24 @@ select {
 
 }
 
+.send-btn:hover {
+    background-color: #396d85;
+}
+
+
+
 @media only screen and (max-width: 600px) {
-    .fb-grid-container {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 3fr 1fr;
-        padding-left: 15px;
-    }
 
-    /* aligning form elements with grid */
-    #form-name {
-        grid-row: 1/2;
-        grid-column: 1/2;
+    .hero-text {
+        width: 250px;
     }
-
-    #form-email {
-        grid-row: 2/3;
-        grid-column: 1/2;
-    }
-
-    #form-concern {
-        grid-row: 3/4;
-        grid-column: 1/2;
-    }
-
-    #form-comment {
-        grid-row: 4/5;
-        grid-column: 1/2;
-    }
-
-    #form-send {
-        grid-row: 5/6;
-        grid-column: 1/2;
-        justify-self: center;
-    }
-  
 }
 
 @media only screen and (max-width: 770px) {
     /* category-images */
 
-    .img-200, .img-100 {
+    .img-200,
+    .img-100 {
         width: 50vw;
     }
 }
@@ -295,6 +250,4 @@ select {
     }
 }
 
-@media only screen and (min-height: 1024px) {
-
-}
+@media only screen and (min-height: 1024px) {}
